# prometheus-edge-detector

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: test.rs
src/: lib.rs
