[package]
name = "prometheus-edge-detector"
version = "0.3.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Find the most recent rising or dropping edge from a prometheus query"
license = "MIT OR Apache-2.0"
repository = "https://github.com/icewind1991/prometheus-edge-detector"
rust-version = "1.63.0"

[dependencies]
tokio = { version = "1.36", features = ["time"] }
thiserror = "1.0.57"
futures-util = "0.3.30"
reqwest = { version = "0.11.24", default-features = false, features = ["json"]}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
main_error = "0.1.2"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
